--- a/blogapp/blog/templates/blog/base.html
+++ b/blogapp/blog/templates/blog/base.html
@@ -8,6 +8,14 @@
     <link href="{% static " css/blog.css" %}" rel="stylesheet"
 </head>
 <body>
+    <div id="content">
+        {% block content %}
+        {% endblock %}
+    </div>
+    <div id="sidebar">
+        <h2>Мой блог</h2>
+        <p>Личный блог Евгения Петрова</p>
+    </div>
     
 </body>
-</html>
+</html>>
