--- a/blogapp/blog/templates/blog/base.html
+++ b/blogapp/blog/templates/blog/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %} {% end block %}</title>
+    <title>{% block title %} {% endblock %}</title>
     <link href="{% static "css/blog.css" %}" rel="stylesheet"
 </head>
 <body>
@@ -18,4 +18,4 @@
     </div>
     
 </body>
-</html>>
+</html>
