--- a/blogapp/blog/templates/blog/post/detail.html
+++ b/blogapp/blog/templates/blog/post/detail.html
@@ -1,1 +1,10 @@
 {% extends "blog/base.html" %}
+{% block title%} {{post.tile}} {% endblock %}
+
+{% block content %}
+    <h1>{{post.ttle}}</h1>
+    <p class="date">
+        Published {{post.publish}} by {{post.author}}
+    </p>
+    {{post.body|linebreaks}}
+{%endblock%}
