--- a/blogapp/blog/templates/blog/post/detail.html
+++ b/blogapp/blog/templates/blog/post/detail.html
@@ -2,7 +2,7 @@
 {% block title%} {{post.tile}} {% endblock %}
 
 {% block content %}
-    <h1>{{post.ttle}}</h1>
+    <h1>{{post.title}}</h1>
     <p class="date">
         Published {{post.publish}} by {{post.author}}
     </p>
