--- a/blogapp/blog/templates/blog/post/detail.html
+++ b/blogapp/blog/templates/blog/post/detail.html
@@ -8,7 +8,7 @@
     </p>
     {{post.body|linebreaks}}
     <p>
-        <a href="{% url "blog:post_share" post_id %}">
+        <a href='{% url "blog:post_share" post_id=post.id %}'>
             Поделиться постом
         </a>
     </p>
